--- a/src/content/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-forecasting.mdx
+++ b/src/content/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-forecasting.mdx
@@ -27,9 +27,57 @@ In this stage you will:
 
 ## Desired outcome [#desired-outcome]
 Use the analysis produced in the baselining stage along with the observability value goals from the optimizing stage to produce future looking estimates for ingest for the coming months, and even years.
+
+## Prerequisites
+
+<CollapserGroup>
+<Collapser
+    id="complete-the-baselining-stage"
+    title="Complete the baselining stage"
+    >
+
+In order to forecast you will need to have a clear understanding of current ingest streams including:
+
+- Ingest by Account  Telemetry Type
+- Ingest by Team and/or Business unit
+- Ingset by Application, K8s Cluster, etc.
+
+In the [Baselining section](https://docs.newrelic.com/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-baselining) we show you how to create a [tabular ingest report](https://docs.newrelic.com/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-baselining#generate-report).  This report can be an important input to this process.  The baselining dashboards you installed in that section will be used in our checkings to validate any optimization activiites that are in flight, but also to track our forecast estimates over time.
+
+</Collapser>
+<Collapser
+    id="complete-the-optimizing-stage"
+    title="Complete the optimizing stage"
+    >
+In the [Optimizing section](https://docs.newrelic.com/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-optimizing) we showed a strctured approach to optimize ingest for all telemetry types.  It is important to know if any optimization plans are in flight as you are forecasting for the future.  By completing the optimizing stage you will understand the practices that allow you to rightsize your ingest.  Even if you cannot quickly complete the optimizing plans they should be considered in your forecasting discussions.  For example.  Let's say we plan on adding 20% more hosts into an account over the coming six months.   We could naively assume that `InfraHostBytes` and `ProcessSampleBytes` could increase by the same amount.  However knowning that we have an optimization plan in place for the same time period to reduce process sample bytes impacts our forecast in a major way.
+
+</Collapser>
+<Collapser
+    id="integrate-other-forecast-knowledge"
+    title="Integrate Other Forecast Knowledge"
+    >
+Any modern digital business is doing at least quarterly capacity reports.  These are used to reserve capacity with a cloud endor as well as the procure on premise hardware.  Often these reports roll up to a VP level manager who may be directly involved for things like:
+
+- How many VMs (or vCPU) are needed in the coming quarter
+- How many more SQL instances are needed in the coming quarter
+- How many load balancer instances are needed in the coming quarterly
+- What is our expected CDN volume increase?
+- How many more Kafka brokers and topics are needed?
+
+There are many more things are included into such a forecast.  We strongly recommend you align your ingest forecast with these reports.  This may mean removing a silo between infra/platform teams and application teams.  This is a high value area where our observability manager can step in and bridge the gap.
+
+</Collapser>
+<Collapser
+    id="Be aware of organization changes"
+    title="Be aware of organization changes"
+    >
+In large complex enterprises one of the main contributor to surprise ingest are organization shifts such as a merger or acquisition of a new business unit.  Accounding for added, unexpected telemetry growth is a necessity.  Involve your New Relic account team earlier in planning for these shifts.
+</Collapser>
+</CollapserGroup>
+
 ## Process [#process]
 
-### Overview
+### Artifacts and Activities
 
 When properly executed the forecasting stage will create a simple but actionable estimate of your organizations ingest for at least the next six months to one year.
 As with the previous stages in this framework we try to keep things light.  There is one simple input and one simple output artifact in the forecasting stage.  In addition there are two planned activities, one for creating the forecast and one for validating our actual ingest against the forecast.
@@ -51,29 +99,12 @@ As with the previous stages in this framework we try to keep things light.  Ther
 - [Data Ingest Governance Team](https://docs.newrelic.com/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-coe#governance-team)
 
 
-### Developing Your Telemetry Forecast Sheet
-In this section we'll work through an example telemetry forecast sheet and give a broad overview of the kinds of considerations that must be taken to manage data ingest in a complex organization.
 
-![Telemetry Forecast Sheet](images/oma-oe-dg-telemetry-budget-sheet-ex.png)
+### Analyze and summarize growth drivers
 
+In the prerequisites section we discussed the importance of incorportaing infrastructure and platform estimates into our forecasting process.  In addition we'll need to incorporate more granular insights that team leads and SREs can provide to build a realistic picture of grwoth.
 
-In this sheet we track the forecast at the level of individual accounts.  In a model where many disparate teams share the same account the line items in the sheet can be `teams` and it's possible there will be more than one team per account.
-
-The minimal requirements for the sheet are:
-
-
-|Column|Description|
-|---|---|
-|Account Name|New Relic Account Name|
-|Telemetry Owner|Manages forecast for a given account for one or more teams|
-|Last Thirty Days of Ingest (GB)|30 Day Ingest Total for All |
-|Ninety Day Target Forecast (GB) |Estimated 30 Day Ingest 90 Days from Now|
-|Forecast Growth %|Directly Correlated with the ninety day target|
-|Growth Driver Notes| Explanation of any factors that would lead to expected increase or decrease in ingest|
-
-### Looking more closely at growth drivers
-
-Let's look in more detail at the growth drivers for some of the teams
+Let's look in more detail at the growth drivers for some of the teams in a hypothetical organization
 
 |Team|Growth Driver|
 |---|---|
@@ -88,11 +119,30 @@ This framework does not outline a formal mechanism for development the estimates
 
 - For each consuming account evaluate each telemetry type
   - For each telemetry type assess what growth drivers are relevant in the coming months
+  - Roll up the final estimates to the account level for a final report
 
-Take the example of the *International Services* account in the previous budget sheet
+### Developing Your Telemetry Forecast Sheet
+In this section we'll work through an example telemetry forecast sheet and give a broad overview of the kinds of considerations that must be taken to manage data ingest in a complex organization.
 
-*International Services High Level Forecast (from main budget sheet)*
-![International Services Highlighted](images/oma-oe-dg-international-services-highlighted.png)
+![Telemetry Forecast Sheet](images/oma-oe-dg-telemetry-budget-sheet-ex.png)
+
+
+In this sheet we track the forecast at the level of individual accounts.  In a model where many disparate teams share the same account the line items in the sheet can be `teams` and it's possible there will be more than one team per account.
+
+The minimal requirements for the sheet are:
+
+
+|Column|Description|
+|---|---|
+|*Account Name*|New Relic Account Name|
+|*Contact*|Manages forecast for a given account|
+|*Last 30 Day Ingest (GB)*|30 Day Ingest Total.  Use a different period if desired |
+|*Target Growth (GB)*|30 Day Ingest Total 3 Months From Now.  Use a differend period if desired|
+|*Target Growth (PCT)*|Growth target expressed as percentage|
+|*Buffer (PCT)*| An optional buffer to allow for slightly higher growth than forecast.  Here we default to 2.5|
+|*Buffered Forecast (GB)*| Revised forecast taking into account the forecast buffer|
+|*Forecast Notes*|Any relevant notes about growth drivers impacting this account.  Use links to detailed docs if needed|
+
 
 
 ### *Monthly ingest checkin*
