Changed icon name

--- a/src/content/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-forecasting.mdx
+++ b/src/content/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-forecasting.mdx
@@ -14,11 +14,14 @@ tags:
 metaDescription: Data governance is a practice of ensuring optimal value for telemetry data collected by an organization, particularly for complex organizations with numerous business units and working groups.
 ---
 
-import forecasticon from './images/oma-oe-dg-forecasting-icon.png'
-import monthlyingestcheckin from './images/oma-oe-dg-monthly-ingest-checkin-icon.png'
-import adhocanomalyicon from './images/oma-oe-dg-adhoc-anomaly-icon.png'
+import forecastingicon from 'images/oma-oe-dg-forecasting-icon.png'
+
+import monthlyingestcheckin from 'images/oma-oe-dg-monthly-ingest-checkin-icon.png'
+
+import adhocanomalyicon from 'images/oma-oe-dg-adhoc-anomaly-icon.png'
+
 <img
-  src={forecasticon}
+  src={forecastingicon}
   alt="Forecast"
   style={{ height: '76px', width: '100px', verticalAlign: 'middle', horizontalAlign: 'right'}}
 />
